--- a/.github/workflows/gitleaks2.yml
+++ b/.github/workflows/gitleaks2.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: 'alpha'
+        ref: 'beta'
         fetch-depth: '0'
     - name: gitleaks-action
       uses: rheien/gitleaks-action@master
