--- a/.github/workflows/gitleaks2.yml
+++ b/.github/workflows/gitleaks2.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        fetch-depth: '0'
+        ref: gamma
+        fetch-depth: '1'
     - name: gitleaks-action
       uses: rheien/gitleaks-action@master
       with:
