--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -1,4 +1,4 @@
-name: gitleaks
+name: gitleaks with version JTheinert
 
 on: [pull_request]
 
@@ -6,8 +6,10 @@ jobs:
   gitleaks:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '2'
     - name: gitleaks-action
-      uses: rheien/gitleaks-action@master
+      uses: JTheinert/gitleaks-action@master
       with:
         config-path: rules.toml
